chain/rosetta-rpc/src/adapters/snapshots/near_rosetta_rpc__adapters__tests__nfvalidator1_receipt_processing_transaction.snap
---
source: chain/rosetta-rpc/src/adapters/mod.rs
expression: nfvalidator1_receipt_processing_transaction
---
Transaction {
    transaction_identifier: TransactionIdentifier {
        hash: "receipt:4vJ9JU1bJJE96FWSJKvHsmmFADCg4gpZQff4P3bkLKi",
    },
    operations: [
        Operation {
            operation_identifier: OperationIdentifier {
                index: 0,
                network_index: None,
            },
            related_operations: None,
            type_: Transfer,
            status: Some(
                Success,
            ),
            account: AccountIdentifier {
                address: "nfvalidator1.near",
                sub_account: None,
            },
            amount: Some(
                Amount {
                    value: SignedDiff(-1000000000000000000),
                    currency: Currency {
                        symbol: NEAR,
                        decimals: 24,
                    },
                },
            ),
            metadata: None,
        },
    ],
    metadata: TransactionMetadata {
        type_: Transaction,
    },
}
